# VLA_Practice

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TASKS.md  project_plan.md  pyproject.toml  requirements.offline.txt
docs/: carla_mac_setup.md  data.md  experiments.md  research.md  research_journal.md  setup.md
launchers/: 01_카를라실행.command  02_카를라연결확인.command  03_학습.command  04_PID튜닝.command  05_평가.command  06_데이터수집.command  07_AutoVLA학습.command  README.md
outputs/handoff/: 5090_manifest.json
outputs/reports/: m10_mac_carla_60s_action_token_open_loop.json  m10_mac_carla_60s_frozen_vlm_open_loop.json  m10_mac_carla_60s_lora_vlm_open_loop.json  m10_mac_carla_60s_reasoning_aux_open_loop.json  m10_mac_carla_60s_vla_training_summary.json  (+12 more)
scripts/: autovla_generate_smoke.py  backfill_route_waypoints.py  backfill_route_waypoints.sh  build_autovla_dataset.py  check_carla_crossover_connection.sh  check_mac_readiness.py  check_offline_budget.sh  collect_carla_data.py  collect_carla_scenes.sh  diagnose_carla_camera_sensors.py  download_offline_assets.sh  download_papers.sh  eval_carla.sh  eval_carla_closed_loop.py  eval_carla_learned.sh  eval_carla_learned_closed_loop.py  eval_open_loop.sh  export_handoff_bundle.sh  prepare_nuscenes.py  render_carla_smoke_video.py  render_carla_trajectory_video.py  render_learned_closed_loop_video.py  render_scene_gif.py  render_scene_report.py  run_carla_camera_diagnostics.sh  run_carla_mac_crossover.sh  run_mac_scale_sweep.sh  serve_policy_inference.py  train_autovla_lora.py  train_lora.sh
wiki/: Glossary.md  Handbook.md  Home.md
(+47 files in other folders)
